# hibf_lib

./: CMakeLists.txt  README.md
include/chopper/search/: search.hpp
include/hibf/: detail_bin_prefixes.hpp  detail_hibf_user_bins.hpp  detail_node_data.hpp  detail_parse_chopper_pack_header_line.hpp  detail_parse_chopper_pack_line.hpp  detail_starts_with.hpp
include/hibf/count/: read_data_file.hpp
include/hibf/search/: chopper_search.hpp  pair_hash.hpp  search.hpp  search_config.hpp  search_data.hpp  sync_out.hpp
src/: CMakeLists.txt  chopper.cpp  chopper_build.cpp  chopper_count.cpp  chopper_search.cpp  count_HIBF_kmers_based_on_binning.cpp  count_kmers_per_bin.cpp  main.cpp
test/: CMakeLists.txt
test/api/count/: chopper_count_test.cpp  count_kmers_test.cpp  read_data_file_test.cpp
test/api/detail/: detail_hibf_user_bins_test.cpp  detail_parse_chopper_pack_header_line_test.cpp  detail_parse_chopper_pack_line_test.cpp
test/api/search/: chopper_search_test.cpp  search_test.cpp
test/cli/: CMakeLists.txt  cli_chopper_pipeline_test.cpp
